feat: add Tailwind CSS v4 with compiled CSS
Replace Tailwind CDN with locally compiled CSS for production use.

Changes:
- Add Tailwind CSS v4 via npm
- Add build scripts (build:css, watch:css)
- Add css/input.css and css/compiled.css (12.6KB)
- Update admin_layout to use local CSS
- Fix modal dialog to use native showModal/close API
- Fix analytics page chart data using json_encode
- Add node_modules/ and database.sqlite to gitignore
- Update README with CSS build instructions

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,13 @@
 # Git worktrees
 .worktrees/
 /vendor/
+/node_modules/
 
 # PHPUnit cache
 .phpunit.cache/
 
 # Setup file contains admin password
 setup.txt
+
+# Local database
+database.sqlite
