docs: update password setup instructions
Replace setup.txt references with current reset.txt approach:
- Installation now describes setting password directly in browser
- Added section for resetting admin password via reset.txt
- Updated .htaccess to protect reset.txt instead of setup.txt

--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteRule ^([^/]+)/?$ index.php?code=$1 [L,QSA]
 RewriteRule ^admin(?:/.*)?$ admin.php [L,QSA]
 
 # Protect sensitive files
-<Files "setup.txt">
+<Files "reset.txt">
     Order allow,deny
     Deny from all
 </Files>
