chore: add test:unit and test:syntax npm scripts
Simplifies testing DX by providing npm run targets for PHPUnit
and PHP syntax checking.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "build:css": "tailwindcss -i css/input.css -o css/compiled.css --minify",
-    "watch:css": "tailwindcss -i css/input.css -o css/compiled.css --watch"
+    "watch:css": "tailwindcss -i css/input.css -o css/compiled.css --watch",
+    "test:unit": "phpunit",
+    "test:syntax": "git ls-files '*.php' | xargs -n1 -P4 php -l"
   },
   "keywords": [],
   "author": "",
